<resources>
    //configs
    <string name="app_name">Tomei</string>
    <string name="navigation_drawer_open">Navigation drawer open</string>
    <string name="navigation_drawer_close">Navigation drawer close</string>
    <string name="filter">Filter</string>

    <string name="version">1.0.1</string>
    <string name="email">tomei@tomei.com.br</string>
    <string name="autor">Developed by: Silas R. Ianez</string>
    <string name="titleExit">Exit</string>


    //Titles
    <string name="titleAbout">About</string>
    <string name="titleNewBeer">New Beer</string>
    <string name="titleMyBeer">My Beers</string>
    <string name="titleNewUser">New User</string>
    <string name="Beer">Beer</string>
    <string name="changeBeer">Changing beer</string>
    <string name="altBrejaSucess">Beer changed successfully</string>
    <string name="savingBeer">Saving the beer</string>
    <string name="saveBeerSucess">Beer added successfully</string>
    <string name="errorBeerCreated">Error creating beer!</string>

    //Loggin


    //Usuário
    <string name="hintUsuario">User</string>
    <string name="hintSenha">Password</string>
    <string name="hintConfirmarSenha">Confirm password</string>
    <string name="hintEntrar">Loggin</string>
    <string name="hintNovoUser">New User</string>
    <string name="errorFindUser">User not found</string>
    <string name="errorUserRequired">User is required</string>
    <string name="errorPassRequired">Password is required</string>
    <string name="savingUser">Saving user...</string>
    <string name="userCreated">User created successfully!</string>
    <string name="errorUserCreated">Error creating user!</string>
    <string name="errorRepeatPass">Passwords must be the same!</string>



    //Breja
    <string name="hintNomeBreja">Name</string>
    <string name="hintTipo">Beer type</string>
    <string name="hintObs">Note</string>
    <string name="errorNameBeerRequired">Name is required</string>
    <string name="errorAltBeer">Error changing beer</string>
    <string name="beerRemoved">Beer removed!</string>
    <string name="errorRemoveBeer">Error removing beer</string>
    <string name="errorLoadingBeer">Error loading beer</string>


    <string-array name="tipo_breja">
        <item>Ale</item>
        <item>Brow Ale</item>
        <item>IPA</item>
        <item>Black IPA</item>
        <item>Double IPA</item>
        <item>Imperial IPA</item>
        <item>Weiss</item>
        <item>Wit Bier</item>
        <item>Red Ale</item>
        <item>Pilsner</item>
        <item>Lager</item>
        <item>Outro</item>
    </string-array>

</resources>
