<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

   <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_nova_breja"
            android:icon="@drawable/beermenu512"
            android:title="@string/titleNewBeer" />
        <item
            android:id="@+id/nav_minhas_brejas"
            android:icon="@drawable/listabrejamenu512"
            android:title="@string/titleMyBeer" />
        <item
            android:id="@+id/nav_novo_usuario"
            android:icon="@drawable/usermenu512"
            android:title="@string/titleNewUser"/>
       <item
           android:id="@+id/nav_sobre"
           android:icon="@drawable/sobremenu512"
           android:title="@string/titleAbout"/>
       <item
           android:id="@+id/nav_sair"
           android:icon="@drawable/sairmenu512"
           android:title="@string/titleExit"/>
    </group>


</menu>
