<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="16dp"
    tools:context="com.br.tomei.CadUsuarioLogin">

    <LinearLayout
        android:id="@+id/formCadUsu"
        android:layout_width="fill_parent"
        android:layout_height="463dp"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/hintUsuario"
            android:textStyle="bold"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/etUsuario"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="0dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/hintSenha"
            android:textStyle="bold"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/etSenha"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="0dp"
            android:password="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/hintConfirmarSenha"
            android:textStyle="bold"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/etSenha2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="0dp"
            android:password="true" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/salvarUsuarioLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="36dp"
            android:clickable="true"
            android:onClick="salvarUsuario"
            app:backgroundTint="@color/colorPrimaryDark"
            app:elevation="11dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@android:drawable/ic_menu_save"
            tools:layout_editor_absoluteY="429dp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
