<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.br.tomei.CadBreja"
    tools:showIn="@layout/app_bar_cad_breja"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="16dp"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:id="@+id/formCadItem"
        android:layout_width="fill_parent"
        android:layout_height="496dp"
        android:layout_centerInParent="true"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="15dp"
            android:text="@string/hintNomeBreja"/>

        <EditText
            android:id="@+id/txtNome"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="0dp"
            android:textColorLink="@color/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="15dp"
            android:text="@string/hintTipo"/>

        <Spinner
            android:id="@+id/txtTipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="0dp"
            android:entries="@array/tipo_breja" />

        <!--            <EditText
                        android:id="@+id/txtTipo"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="0dp"
                        android:textColorLink="@color/colorPrimary" />-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="15dp"
            android:text="@string/hintObs"/>

        <EditText
            android:id="@+id/txtDescricao"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="0dp"
            android:ems="10"
            android:textColorLink="@color/colorPrimary" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="243dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:numStars="5"
            android:rating="0.0"
            android:stepSize="1.0" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btSalvarBreja"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="@dimen/fab_margin"
            android:layout_marginVertical="30dp"
            android:clickable="true"
            app:backgroundTint="@color/colorPrimaryDark"
            app:elevation="11dp"
            app:fabSize="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@android:drawable/ic_menu_save"
            tools:layout_editor_absoluteY="429dp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
