<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.br.tomei.ManterBreja"
    tools:showIn="@layout/activity_manter_breja"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:id="@+id/frm_cad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="0dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/txtId"
                android:layout_width="fill_parent"
                android:layout_height="17dp"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:enabled="false"
                android:visibility="invisible" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="15dp"
            android:text="@string/hintNomeBreja" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="52dp">

            <AutoCompleteTextView
                android:id="@+id/txtNome"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="0dp"
                android:textColorLink="@color/colorPrimary" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="15dp"
            android:text="@string/hintTipo"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Spinner
                android:id="@+id/txtTipo"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="0dp"
                android:enabled="false"
                android:entries="@array/tipo_breja" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="15dp"
            android:text="@string/hintObs"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/txtDescricao"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="0dp"
                android:textColorLink="@color/colorPrimary"
                android:ems="10"
                android:enabled="false" />
        </android.support.design.widget.TextInputLayout>

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="243dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:enabled="false"
            android:numStars="5"
            android:rating="0.0"
            android:stepSize="1.0" />

        <Button
            android:id="@+id/btSalvarDados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Salvar"
            android:onClick="salvarDadosBreja"
            android:visibility="gone"/>

        <ProgressBar
            android:id="@+id/progress_save"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:visibility="gone" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>